projects/dvc376/css/styles.css
@charset "UTF-8";
/* CSS Document */
body,
#graphic .axis {
    color: #000;
}
  
text {
    fill: #000;
}
.social-button {
    position: relative;
    left: 45%;
    height: 30px;
    width: 30px;
    background: #fff;
    opacity: 1.0;
    float: left;

    height: 35px;
    width: 35px;
}

.social-button:first-of-type {
    margin-right: 15px;
}

.social-button img {
    width: 35px;
    height: 35px;
}

.visuallyhidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0;
}

.wrapper {
    max-width: 800px;
    margin: 0 auto;
    font-family: 'Open Sans', Arial, sans-serif;
    padding: 0;
}

.landing-screen {
    max-width: 800px;
    height: auto;
    background-color: #e3e9ec;
}

.head {
    text-align: center;
    height: auto;
}

.foot {
    height: auto;
    padding-left: 40px;
    padding-bottom: 40px;
}

.start-button {
    background-color: #36a9e1;
    border: none;
    color: #fff;
    text-align: center;
    display: inline-block;
    font-size: 20px;
    cursor: pointer;
    padding: 14px 75px 14px 75px;
}

.start-button:hover {
    background-color: #576074;
    text-decoration: none;
    color: #fff;
}

span.right-arrow {
    background-image: url('../img/right-arrow.svg');
    background-repeat: no-repeat;
    display: inline-block;
    vertical-align: middle;
    height: 21px;
    width: 18px;
    margin-left: 7px;
    margin-right: -5px;
}

.h1 {
    font-size: 36px;
    color: #576074;
    font-weight: 400;
    padding-top: 30px;
    margin-top: 0;
}

img {
    height: auto;
    width: 100%;
    padding: 0;
    margin: 0;
}

.title {
    background-color: #e3e9ec;
    height: auto;
    margin: 0;
}

.category {
    /* font-size: 14px;
    font-weight: 600;
    padding-top: 5px;
    color: #576074;
    text-align: center; */

    font-size: 12px;
    font-weight: 600;
    padding-top: 3px;
    color: #000;
    text-align: center;

}

p {
    font-size: 28px;
    font-weight: 700;
    padding-top: 5px;
    color: #000;
    text-align: center;
    padding-top: 0;
    margin-top: -3px;
}

p.ons-link {
    font-size: 16px;
    font-weight: 300;
    padding-top: 5px;
    color: #576074;
    float: right;
    padding-right: 40px;
    padding-top: 40px;
}

a:hover,
a:active {
    opacity: 0.7;
}

a,
a:link,
a:visited {
    font-weight: 300;
    color: #4774CC;
}

.h2 {
    font-size: 18px;
    font-weight: 400;
    padding-bottom: 10px;
    color: #000;
    line-height: 22px;
    text-align: left;
    margin-top: 0;
}

.h3 {
    font-size: 18px;
    font-weight: 300;
    color: #576074;
    text-align: center;
    padding-right: 30px;
    padding-left: 30px;
    margin-top: 6px;
}

/*#calculator {
    display: none;
    width: 100%;
}*/

.square {
    float: left;
    width: 13.5%;
    height: auto;
    margin-right: 0.9%;
    margin-bottom: 10px;
    background-color: #e3e9ec;
    padding: 0;
}

.square-no-marg {
    float: left;
    width: 13.5%;
    height: auto;
    margin-bottom: 20px;
    background-color: #e3e9ec;
    margin-right: 0;
}
.icon,
.icon1,
.icon2,
.icon3,
.icon4,
.icon5,
.icon6,
.icon7 {
    width: 100%;
    height: 75px;
    background-repeat: no-repeat;
    background-position: center;
}


.icon {
    fill: #000;
}

.icon svg {
    position: relative;
    top: 5px;
}
/* .icon1 {
    background-image: url("../img/1.svg");
}

.icon2 {
    background-image: url("../img/2.svg");
}

.icon3 {
    background-image: url("../img/3.svg");
}

.icon4 {
    background-image: url("../img/4.svg");
}

.icon5 {
    background-image: url("../img/5.svg");
}

.icon6 {
    background-image: url("../img/6.svg");
}

.icon7 {
    background-image: url("../img/7.svg");
} */

.button-area {
    max-width: 96px;
    width: 100%;
    margin: 0 auto;
    margin-bottom: 6px;
}

.btn {
    background-color: #36a9e1;
    border-color: #36a9e1;
    color: #fff;
    width: 30px;
    height: 30px;
    border-radius: 0;
    padding-top: 6px;
    padding-left: 8px;
    font-size: 12px;
}

.form-control {
    height: 30px;
    text-align: center;
    padding: 0;
}

.btn:hover {
    background-color: #576074;
    border-color: #576074;
    color: #fff;
}

.btn:focus,
.form-control:focus,
.social-button:focus {
    box-shadow: 0 0 0px 3pt orange;
    outline: transparent 2px;
}

.tooltip {
    max-width: 107px;
    color: #333;
}

.social-footer {
    margin-top: 15px;
    clear: both;
}

#graphic .axis path {
    fill: none;
    stroke: none;
    shape-rendering: crispEdges;
}

.bar_pos {
    fill: #36a9e1;
}

.bar_neg {
    fill: #36a9e1;
}

#monthly-value {
    background-color: #e3e9ec;
    border-bottom: solid;
    border-color: #36a9e1;
    border-width: 6px;
    width: 49%;
    height: 80px;
    clear: both;
    float: left;
    margin-right: 2%;
    margin-bottom: 20px;
    margin-top: 15px;
    padding: 10px;
}

#annual-value {
    background-color: #e3e9ec;
    border-bottom: solid;
    border-color: #36a9e1;
    border-width: 6px;
    width: 49%;
    float: left;
    height: 80px;
    margin-bottom: 20px;
    margin-top: 15px;
    padding: 10px;
}

.total {
    font-size: 18px;
    font-weight: 400;
    text-align: center;
}

.social {
    font-size: 18px;
    font-weight: 400;
    text-align: center;
    color: #333;
}

#footer {
    width: 100%;
}

#source {
    width: 100%;
    float: left;
    height: auto;
    margin-bottom: 10px;
    margin-top: 18px;
    border-top: solid;
    border-color: #eaeaea;
    border-width: 1px;
}

.source-text {
    text-align: center;
    font-size: 14px;
    font-weight: 300;
    color: #808080;
    padding-top: 10px;
}


@media (max-width:767px) {

    .square {
        width: 24%;
        margin-right: 1%;
        margin-bottom: 8px;
    }

    .square-no-marg {
        width: 24%;
        margin-bottom: 1%;
    }

    .h1 {
        font-size: 28px;
    }

    .h3 {
        font-size: 16px;
        line-height: 20px;
    }

    .start-button {
        font-size: 18px;
        padding: 12px 70px 12px 70px;
    }

    span.right-arrow {
        height: 21px;
        width: 18px;
        margin-left: 5px;
        margin-right: -5px;
    }

    .foot {
        padding-left: 30px;
        padding-bottom: 30px;
    }

    p.ons-link {
        font-size: 15px;
        padding-top: 30px;
    }

    p {
        font-size: 28px;
        font-weight: 700;
        padding-top: 5px;
        color: #576074;
        text-align: center;
        padding-top: 0;
        margin-top: -3px;
    }

    @media (max-width:480px) {

        .square {
            width: 32%;
            margin-right: 1.3%;
        }

        .square-no-marg {
            width: 32%;
        }

        .h1 {
            font-size: 22px;
        }

        .h2 {
            font-size: 18px;
            padding-bottom: 5px;
            line-height: 22px;
        }

        .h3 {
            font-size: 14px;
            line-height: 18px;
        }

        .start-button {
            font-size: 16px;
            padding: 10px 45px 10px 45px;
        }

        span.right-arrow {
            height: 20px;
            width: 18px;
            margin-left: 5px;
            margin-right: -5px;
        }

        p.ons-link {
            font-size: 14px;
            padding-top: 25px;
            padding-right: 30px;
        }

        /*#monthly-value { 
    width: 100%;
}

#annual-value { 
    width: 100%;
}*/

        .icon1,
        .icon2,
        .icon3,
        .icon4,
        .icon5,
        .icon6,
        .icon7 {
            height: 55px;
        }


        .icon1 {
            background-image: url("../img/1-sml.svg");
        }

        .icon2 {
            background-image: url("../img/2-sml.svg");
        }

        .icon3 {
            background-image: url("../img/3-sml.svg");
        }

        .icon4 {
            background-image: url("../img/4-sml.svg");
        }

        .icon5 {
            background-image: url("../img/5-sml.svg");
        }

        .icon6 {
            background-image: url("../img/6-sml.svg");
        }

        .icon7 {
            background-image: url("../img/7-sml.svg");
        }

        .social {
            font-size: 16px;
            font-weight: 400;
            text-align: center;
            color: #333;
        }

    }

